Calculate parents on the fly