@@ -484,7 +484,7 @@ public class Node extends DomainObject implements EntityWithMetadata {
                 .map(NodeConnection::getParent)
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Collection<Node> getResources() {
@@ -494,6 +494,20 @@ public class Node extends DomainObject implements EntityWithMetadata {
                 .map(Optional::get)
                 .filter(s -> s.getNodeType() == NodeType.RESOURCE)
                 .toList();
+    }
+
+    private Collection<Node> getAllParentsRecursive() {
+        var parents = getParentNodes();
+        ArrayList<Node> all = new ArrayList<>(parents);
+        parents.forEach(parent -> all.addAll(parent.getAllParentsRecursive()));
+        return all;
+    }
+
+    public Collection<TaxonomyContext> getAllParentContexts() {
+        return getAllParentsRecursive().stream()
+                .map(Node::getContexts)
+                .flatMap(Collection::stream)
+                .collect(Collectors.toSet());
     }
 
     public void setIdent(String ident) {
